--- a/Jesper.html
+++ b/Jesper.html
@@ -5,15 +5,20 @@
 <head>
 
     <title>My first web page hoi</title>
+	<link rel="stylesheet" href="style.css">
 
     <!-- This is a comment, by the way -->
 
 </head>
+<!DOCTYPE html>
+<html>
+<head>
+<title>CSS Example</title>
 
 <body>
 
-<h1>My first web page</h1>
 
+<h1>My first web page</h1>
 <h2>What this is</h2>
 <p>A simple page put together using HTML. <em>I said a simple page put together using HTML.</em> A simple page put together using HTML. A simple page put together using HTML. A simple page put together using HTML. A simple page put together using HTML. A simple page put together using HTML. A simple page put together using HTML. A simple page put together using HTML.</p>
 
@@ -29,11 +34,12 @@
             <li>To the little talking duck in my brain</li>
         </ol>
     </li>
-    <li>Because I have fallen in love with my computer and want to give her some HTML loving.</li>
+    <li>Because I have a big penis</li>
 </ul>
 
 <h2>Where to find the tutorial</h2>
-<p><a href="http://www.htmldog.com"><img src="http://www.htmldog.com/badge1.gif" width="120" height="90" alt="HTML Dog"></a></p>
+<p><a href="http://www.htmldog.com">pikkebaas</a></p>
+<img src="http://www.htmldog.com/badge1.gif" width="120" height="90" alt="HTML Dog"></a></p>
 
 <h3>Some random table</h3>
 <table>
